# example_gni_project

./: .buildinfo  LICENSE  README.md  convergence.html  example.html  genindex.html  index.html  installation.html  integrators.html  ivp.html  mat-modindex.html  matlab.html  objects.inv  plotting.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  timestepping.html  workshop.md
.github/workflows/: main.yml
_sources/: convergence.rst.txt  example.rst.txt  index.rst.txt  installation.rst.txt  integrators.rst.txt  ivp.rst.txt  matlab.rst.txt  plotting.rst.txt  timestepping.rst.txt
docs/: conf.py  convergence.rst  example.rst  index.rst  installation.rst  matlab.rst  plotting.rst
example_gni_project/: __init__.py  containers.py  convergence_analysis.py  convergence_study.py  integrators.py  plotting.py  time_stepping.py
examples/: pendulum.ipynb
matlab_src/MyModule/: Forward_Euler.m  MyHandleClass.m  fun.m  main.m
tests/: test_integrators.py
