[metadata]
name = example_gni_project
version = 0.1
author = Markus Lohmayer
author_email = markus.lohmayer@fau.de
description = Python package for numerical geometric integration (example / template project)
url = https://github.com/THREAD-3-2/example_gni_project
project_urls =
    Code=https://github.com/THREAD-3-2/example_gni_project
    Issues=https://github.com/THREAD-3-2/example_gni_project/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy
    scipy
    autograd
    matplotlib
python_requires = >=3.7
setup_requires =
    setuptools>=42
    wheel

[options.packages.find]
exclude =
    tests
